# SlicerTissue

./: CMakeLists.txt  COPYRIGHT.txt  README.txt
Experiments/: mpm-implicit.py  slicer-usd.py
TissueSimulation/: CMakeLists.txt  TissueSimulation.py
TissueSimulation/festiv/: __init__.py  el_grid.py  element.py  isomap.py  meshing.py  node.py  oneelement.py  sample.py  structure.py  tests.py
